# attention_analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  test-simplex-large.ipynb  test-simplex-small.ipynb  test.ipynb
datasets/: download.py
experiments/linear_kernel/: synthetic_experiments.ipynb
notebooks/: preprocess_traffic_dataset.ipynb  test.ipynb  visualize_datasets.ipynb
notebooks/Simplex_attn_experiments/: simplex_attention_decoder_only_experiments.ipynb
notebooks/old_initial_experiments/: causal_embedding_decoder_only_experiments.ipynb  prob_decoder_only_experiments.ipynb
notebooks/shift_attn_experiments/: conv_emb_shift_attention_decoder_only_experiments.ipynb  shift_attention_decoder_only_experiments.ipynb
notebooks/simplex_experiments/: simplex_algorithm_experiments.ipynb  simplex_algorithm_experiments_v2.ipynb  test-simplex-large.ipynb  test-simplex-small.ipynb
src/: sampler.py  snapshots.py  train.py  utils.py
src/Datasets/: BaseDataset.py  ElectricityDataset.py  PeriodicCurvesDataset.py  SyntheticDataset.py  TourismDataset.py  TrafficDataset.py
src/Nbeats/: nbeats.py
src/Simplex/: SimplexAlgorithm.py
src/Transformer/: ConvAttention.py  DecoderOnly.py  DistanceMetrics.py  EncoderDecoder.py  KernelAttention.py  ShiftAttention.py  TransformerModules.py
tests/: datasets.ipynb  kernel_attention.ipynb
